[package]
name = "yj"
version = "1.2.0"
authors = ["Bruce Adams <bruce.adams@acm.org>"]
categories = ["command-line-utilities"]
description = "Command line tool that converts YAML to JSON"
edition = "2018"
homepage = "https://github.com/bruceadams/yj"
keywords = ["cli", "json", "yaml"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bruceadams/yj"

[dependencies]
exitfailure = "0.5.1"
serde_yaml = "0.8.23"
snafu = "0.6.10"

[dependencies.serde_json]
features = ["arbitrary_precision", "preserve_order"]
version = "1.0.74"

[dependencies.clap]
features = ["derive", "cargo", "wrap_help"]
version = "3.2.7"
